--- a/Tarea09.ipynb
+++ b/Tarea09.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "## Eliminación gaussiana vs Gauss-Jordan\n",
     "\n",
-    "CONJUNTO DE EJERCICIOS "
+    "### CONJUNTO DE EJERCICIOS "
    ]
   },
   {
